support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_pythoncode_bad2.i
%module xxx

%pythoncode %{
    def one():
        print "in one"
%}

%pythoncode %{
        print "still in one"

    def two():
        print "in two"
%}
